# Barbell

./: .env.db.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  backend.Dockerfile  cspell.json  docker-compose.yml  docker-entrypoint.sh  main.py  nuke-databse.sh  pyproject.toml  requirements.txt  test.html
.github/: dependabot.yml
.zed/: settings.json
Example Robot Code/: robot.py
app/: buckets.py  config.py  database.py  dependencies.py  helpers.py  main.py  models.py
app/api/: README.md  api_v1.py  auth_v1.py  internal_v1.py  public_v1.py  web.py
app/api/v1/: admin.py  categories.py  download.py  images.py  management.py  router.py  stats.py  upload.py
app/core/: config.py  dependencies.py  helpers.py
app/crud/: annotation.py  base.py  download_batch.py  image.py  label_category.py  team.py  upload_batch.py  user.py
app/db/: database.py
app/models/: __init__.py  annotation.py  download_batch.py  helpers.py  image.py  label_category.py  models.py  schemas.py  team.py  upload_batch.py  user.py
app/routers/: api_v1.py  api_v1_status.md  internal.py  private_v1.py  public_v1.py  web.py
app/services/: buckets.py  download_packaging.py  image_processing.py  monitoring.py
app/services/email/: email.py
app/tasks/: download_packaging.py  image_processing.py
app/templates/: home.html
app/tests/: conftest.py  test_auth.py  test_crud.py  test_public.py
app/web/: README.md
backend/app/: dependencies.py  main.py
docs/: auth.md  capture.md  developing.md  discussions.md  download.md  faq.md  introduction.md  moderating.md  public.md  quickstart.md  roadmap.md  structure.yaml  upload.md
docs/plugins/: code_switch.py
frontend/: Gibbon  frontend.Dockerfile  package-lock.json  package.json  vite.config.js
frontend/email_templates/: account_verification.mjml
frontend/js/: index.js  main.js
frontend/scss/: custom.scss  main.scss
scripts/: build_docs.py  build_emails.sh  nuke-databse.sh  run-tests.sh
(+96 files in other folders)
